Рефакторинг тестов создания курьера согласно замечаниям ревьювера.
1. Убрал явную сериализацию тела запроса
2. Вынес дублирующийся код в клиента для /api/v1/couriers